# python-project-lvl1

./: .gitignore  .travis.yaml  Makefile  README.md  pyproject.toml  pyproject.toml.orig
brain_games/: cli.py
brain_games/games/: calc.py  engine.py  even.py  even_logic.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  run.py
