[tool.poetry]
name = "sergeichukd_brain_games"
version = "0.2.0"
description = "This is my first python pocket"
authors = ["sergeichuk dmitrii"]
packages = [
	{ include = "brain_games" }
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
