[tool.poetry]
name = "python-project-lvl1"
version = "0.3.0"
description = "This is my first python pocket"
authors = ["sergeichuk dmitrii"]
repository = "https://github.com/sergeichukd/python-project-lvl1.git"
packages = [
	{ include = "brain_games" }
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games_script:main"
brain-even = "brain_games.scripts.brain_even:main"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/legacy"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
