[tool.poetry]
name = "sergeichukd-brain-games"
version = "1.2.0"
description = "This is my first python pocket"
authors = ["sergeichuk dmitrii"]
repository = "https://github.com/sergeichukd/python-project-lvl1.git"
packages = [
	{ include = "brain_games" }
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[tool.poetry.scripts]
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/legacy"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
